Adicionado página de consultas tanto na área do médico quanto paciente

--- a/paciente/templates/escolher_horario.html
+++ b/paciente/templates/escolher_horario.html
@@ -10,6 +10,8 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
+    {% include "partials/navbar.html" %}
+    
     <div class="container">
         <br><br>
         <div class="row">
