--- a/medico/templates/cadastro_medico.html
+++ b/medico/templates/cadastro_medico.html
@@ -7,6 +7,9 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
+
+{% include "partials/navbar.html" %}
+
     <div class="container">
         <br>
         <br>
