--- a/medico/templates/consultas_medico.html
+++ b/medico/templates/consultas_medico.html
@@ -10,6 +10,9 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
+
+{% include "partials/navbar.html" %}
+
     <div class="container">
         <br>
         {% if messages %}
@@ -50,7 +53,7 @@
                 <tbody>
                     {% for consulta in consultas_hoje %}
                         <tr>
-                            <td><a href="">{{consulta.paciente}}</a></td>
+                            <td><a href="{% url 'consulta_area_medico' consulta.id %}">{{consulta.paciente}}</a></td>
                             <td>{{consulta.get_status_display}}</td>
                             <td>{{consulta.data_aberta.data}}</td>
                         </tr>
@@ -73,7 +76,7 @@
                 <tbody>
                     {% for consulta in consultas_restantes %}
                         <tr>
-                            <td><a href="">{{consulta.paciente}}</a></td>
+                            <td><a href="{% url 'consulta_area_medico' consulta.id %}">{{consulta.paciente}}</a></td>
                             <td>{{consulta.get_status_display}}</td>
                             <td>{{consulta.data_aberta.data}}</td>
                         </tr>
